# EvaAssistant

./: EvaAssistant.py  README.md  const_voices.py  pyproject.toml  requirements.txt
Benchmarks/: modules_speed_benchmark.sh  ollama_benchmark_results.txt  transcription_analysis.txt
shell/: sysfetch
