[project]
name = "evaassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.1",
    "ollama>=0.5.1",
    "pip>=25.1.1",
    "simpleaudio>=1.0.4",
    "simpletts>=0.0.3",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
